<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_lugar"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/t_nombre" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_nombre"
            android:hint="algo que identifique el lugar"
            android:id="@+id/nombre">
            <requestFocus/>
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nombre"
            android:text="@string/tipo_lugar"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/t_tipo" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/t_tipo"
            android:layout_toEndOf="@id/t_tipo"
            android:layout_alignTop="@id/t_tipo"
            android:id="@+id/tipo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_tipo"
            android:text="@string/direccion_lugar"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/t_direccion" />

        <EditText
            android:id="@+id/direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_direccion"
            android:hint="dirección del lugar"
            android:inputType="textPostalAddress" />

        <TextView
            android:id="@+id/t_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/direccion"
            android:text="@string/telefono_lugar"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/t_telefono"
            android:layout_toEndOf="@id/t_telefono"
            android:layout_alignTop="@id/t_telefono"
            android:hint="teléfono para contactar"
            android:inputType="phone" />

        <TextView
            android:id="@+id/t_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/telefono"
            android:text="@string/url_lugar"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_url"
            android:hint="página web"
            android:inputType="textUri" />

        <TextView
            android:id="@+id/t_comentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/url"
            android:text="@string/comentario_lugar"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/comentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_comentario"
            android:hint="introduce tus notas"
            android:inputType="textMultiLine" />

    </RelativeLayout>
</ScrollView>